--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # dc: Data Carpentry
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
-carpentry: "swc"
+carpentry: ""
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "BioConductor"
 
 
 #------------------------------------------------------------
@@ -28,7 +28,7 @@ repository: <USERNAME>/<PROJECT>
 # Email address, no mailto:
 # (Don't change this -- the contact address for your workshop will be set 
 # in the index.md file)
-email: "team@carpentries.org"
+email: "susan.mcclatchy@jax.org"
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
