added Bioconductor install instructions

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: ""
 
 # Overall title for pages.
-title: "BioConductor"
+title: "BioConductor for RNA Sequence Analysis"
 
 
 #------------------------------------------------------------
